--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ disqus_shortname:
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            Arsenal
+#twitter:            
 #facebook:           username
 github-url:         UWEGamesESD
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:           huxyuk
+#linkedin:           username
 #xing:              username
 #instagram:          username
 #lastfm:            username
