--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ disqus_shortname:
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-#twitter:            
+email:             michael2.ratcliffe@live.uwe.ac.uk
+twitter:            mikeratdev
 #facebook:           username
-github-url:         UWEGamesESD
+github-url:         mikeratcliffe97
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:           username
 #xing:              username
