--- a/_config.yml
+++ b/_config.yml
@@ -38,12 +38,12 @@ disqus_shortname:
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:             michael2.ratcliffe@live.uwe.ac.uk
-twitter:            mikeratdev
+email:             michael.ratcliffe97@gmail.com   
+twitter:            mikeratgames
 #facebook:           username
 github-url:         mikeratcliffe97
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:           username
+linkedin:          mike-ratcliffe97
 #xing:              username
 #instagram:          username
 #lastfm:            username
