--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              "Mike makes games"
-bio:                "I'm a 23 year old Games Technology graduate based in Bristol, hoping to enter the industry in design or production."
+bio:                "Games Technology graduate based in Cheltenham, currently working in Digital Health as well as freelance VR development"
 description:        "My Portfolio of work and project; 
                       Contact me using the buttons below: "
 reading_time:       false
