--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              "Mike makes games"
-bio:                "Games Technology graduate based in Cheltenham, currently working in Digital Health as well as freelance VR development"
-description:        "My Portfolio of work and project; 
+bio:                "Games Technology graduate based in Cheltenham, currently working in Digital Health as well as freelance VR development."
+description:        "My Portfolio of work and projects; 
                       Contact me using the buttons below: "
 reading_time:       false
 words_per_minute:   200
