--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              "Mike makes games"
-bio:                "Games Technology graduate based in Cheltenham, currently working in Digital Health as well as freelance VR development."
+bio:                "Games Technology graduate based in Cheltenham, currently working in VR development and project management for the digital health sector."
 description:        "My Portfolio of work and projects; 
                       Contact me using the buttons below: "
 reading_time:       false
