sell yourself sweetie

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              "Mike makes games"
-bio:                "Games Technology graduate based in Cheltenham, currently working in VR development and project management for the digital health sector."
+bio:                "Welcome to my website. I enjoy the people-facing side of programming. I work hard to take great ideas and transform them into digital solutions. Currently working on a VR training simulation for student doctors in the NHS. <br>Available for new work in early 2023"
 description:        "My Portfolio of work and projects; 
                       Contact me using the buttons below: "
 reading_time:       false
