--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              "Mike makes games"
-bio:                "Welcome to my website. <br>I enjoy the people-facing side of programming. <br>I work hard to take great ideas and transform them into digital solutions. <br>Currently working on a VR training simulation for student doctors in the NHS. <br>Available for new work in early 2023"
+bio:                "Welcome to my website. <br>I enjoy the people-facing side of programming. <br>I work hard to take great ideas and transform them into digital solutions. <br>Available now for new work"
 description:        "My Portfolio of work and projects; 
                       Contact me using the buttons below: "
 reading_time:       false
